[package]
name = "cat-spend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
bitcoin = {version = "0.30.2", features = ["serde", "rand"]}
secp256k1 = { version = "0.27.0", features = ["rand", "rand-std"]}
hex = "0.4.3"
miniscript = "10.0.0"